# TinyModelCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: cli11.cmake  fifo_map.cmake  xml2.cmake
patches/fifo_map/: CMakeLists.txt
patches/libxml2/: CMakeLists.txt  config.h.in
src/: generate_ua_nodeset2.cpp  main.cpp  modelgenerator.cpp  modelgenerator.h  opc_ua_nodeset2.cpp  opc_ua_nodeset2.h  ua_model.cpp  ua_model.h  ua_nodeset2_generator.cpp  ua_nodeset2_generator.h  xmlpp.cpp  xmlpp.h
